<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <ProgressBar
           android:id="@+id/progressBar"
           style="@android:style/Widget.Material.ProgressBar"
           android:layout_width="158dp"
           android:layout_height="146dp"
           android:progressTint="#009688"
           android:visibility="invisible"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:fillViewport="true"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal|center_vertical"
               android:layout_margin="20dp"
               android:orientation="vertical">

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/loginTextView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/login"
                   android:textAlignment="center"
                   android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                   android:textColor="@color/main" />

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/outlinedTextFieldEmail"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:hint="@string/email"
                   android:textColorHint="@color/main">

                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textEmailAddress"
                       android:imeOptions="actionNext"/>

               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/outlinedTextFieldPassword"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:hint="@string/password"
                   android:textColorHint="@color/main">

                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
                       android:imeOptions="actionNext"/>

               </com.google.android.material.textfield.TextInputLayout>

               <Button
                   android:id="@+id/outlinedButtonLogin"
                   style="?attr/materialButtonOutlinedStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:text="@string/login"
                   android:textColor="@color/main"
                   android:textStyle="bold" />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/forgetPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:focusable="true"
                   android:text="@string/forget_password"
                   android:textAlignment="center"
                   android:textColor="@color/main"
                   android:textStyle="bold" />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/registerText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:clickable="true"
                   android:focusable="true"
                   android:text="@string/don_t_have_account_register"
                   android:textAlignment="center"
                   android:textColor="@color/main"
                   android:textStyle="bold" />

           </LinearLayout>
       </androidx.core.widget.NestedScrollView>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
